--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-env": "^1.7.0",
     "cross-env": "^7.0.3",
     "jest": "^26.6.3",
+    "mirage": "^0.0.7",
     "supertest": "^6.1.3"
   }
 }
